# keyrita-core

./: .clang-format  .gitignore  CMakeLists.txt  FetchDependencies.cmake  README.md  keyrita-core-proj-stub  keyrita-core-proj.sublime-project
api/keyrita_core/: Dataset.hpp  MatrixAlloc.h  MatrixAlloc.hpp  MatrixQuery.h  MatrixQuery.hpp  MatrixState.h  MatrixState.hpp  MatrixUtils.h  ScalarState.h  ScalarState.hpp  State.h  State.hpp
api/keyrita_core/State/: MatrixAlloc.hpp  MatrixQuery.hpp  MatrixState.hpp  MatrixUtils.hpp  ScalarState.hpp  StateBase.hpp
private_include/: DebugBreak.hpp  Timer.hpp
src/: State.cpp  main.cpp
tests/: AnalyzeTests.test.cpp  CMakeLists.txt  StateTests.test.cpp
